--- a/public/aframe2.html
+++ b/public/aframe2.html
@@ -8,7 +8,8 @@
     $(document).bind('keypress', function(e) {
         console.log(e.which)
         if(e.which == '101'){
-          addThings()
+          // addThings()
+          addThingsBetweenTwoPoints()
         }
     })
 
@@ -42,9 +43,82 @@
         sceneEl.appendChild(entityEl);
 
       }
-
-
     }
+
+    function addThingsBetweenTwoPoints(){
+
+      var sceneEl = document.querySelector('a-scene');
+      var camera = document.querySelector('[camera]')
+      var target = 90
+
+      // var camRot = camera.getAttribute('rotation')
+
+      // var cameraEl = document.querySelector('#camera');
+      var rotation = camera.getAttribute('rotation');
+
+
+      // var worldPos = new THREE.Vector3();
+      // worldPos.setFromMatrixPosition(cameraEl.object3D.matrixWorld);
+      var camRotNormalized = rotation.y%360
+      console.log(camRotNormalized);
+
+      // var diff = camRot.y - target
+
+      // console.log(camRot)
+
+      // if(diff < 0){
+      //   diff += 360
+      // }
+      //
+      // var direction = 0
+      //
+      // if(diff > 180){
+      //   direction = 1
+      //   //go forwards
+      //
+      // }else{
+      //   direction = -1
+      //   //go backwards
+      // }
+
+      var increment = target/10
+
+      for(var i = 0; i < 10; i ++ ){
+
+        var entityEl = document.createElement('a-entity');
+
+        entityEl.setAttribute('geometry', { primitive: 'box', height: 1.4, width: 1 });
+        entityEl.setAttribute('material', {color: 'gray', opacity: 0.5});
+        // entityEl.setAttribute('change-color-on-hover', 'green')
+
+        // entitlEl.setAttribute('position', {})
+        var randomHeight = 1 // i //(0.5-Math.random())*6
+        // var randomRotationTarget = i*10//Math.random() * 360
+        var rotationTarget = 0
+
+        // if(direction === 1){
+        //   rotationTarget = camera.z + increment*i
+        // }else if (direction === -1){
+        //   rotationTarget = camera.z - increment*i
+        // }
+
+        rotationTarget = i * increment
+        // console.log(rotationTarget)
+
+        entityEl.setAttribute('position', {
+            x: 5 * Math.sin(rotationTarget * 90/Math.PI), //0.5-Math.random() *6,
+            y: 1,
+            z: 5 * Math.cos(rotationTarget * 90/Math.PI) //0.5-Math.random() *6
+          })
+
+        entityEl.setAttribute('remove-object-on-hover', {color:'blue'});
+
+        sceneEl.appendChild(entityEl);
+
+      }
+    }
+
+
       AFRAME.registerComponent('box', {
         schema: {
           width: {type: 'number', default: 1},
@@ -168,6 +242,7 @@
       });
 
       AFRAME.registerComponent('remove-object-on-hover',{
+
         schema:{
           color: {default: 'red'}
         },
@@ -204,20 +279,21 @@
             // entityEl.setAttribute('box',{ width=1, height=2, depth=3, color="rgb(50,180,50)"});
             // var randomHeight = 0.5 //(0.5-Math.random())*6
             // var randomRotationTarget = Math.random() * 360
-          el.setAttribute('color', data.color);
+          // el.setAttribute('color', data.color);
             // el.setAttribute('position', {
             //   x: 3* Math.cos(randomRotationTarget * 180/Math.PI), //0.5-Math.random() *6,
             //   y: randomHeight,
             //   z: 3* Math.sin(randomRotationTarget * 180/Math.PI) //0.5-Math.random() *6
             // })
+
           });
 
           el.addEventListener('mouseleave', function () {
 
-            el.setAttribute('color', defaultColor);
+            // el.setAttribute('color', defaultColor);
 
-            addThings()
-
+            // addThings()
+              addThingsBetweenTwoPoints()
             // entityEl.setAttribute('geometry', { primitive: 'box', height: 3, width: 1 });
             // var origin = el.getAttribute('position')
             // var newOrigin = origin
@@ -260,9 +336,9 @@
       </a-entity>
 
       <a-box id="jumpbox" position="-3 0.5 -3" rotation="0 45 0" color="rgb(50,180,50)" change-color-on-hover="color: blue"></a-box>
-      <!-- <a-box position= "3 0.5 -3" rotation="0 45 0" color="rgb(227,194,7)" change-color-on-hover="color: blue"></a-box>
+      <a-box position= "3 0.5 -3" rotation="0 45 0" color="rgb(227,194,7)" change-color-on-hover="color: blue"></a-box>
       <a-box position= "3 0.5 3" rotation="0 45 0" color="rgb(50,50,190)" change-color-on-hover="color: blue"></a-box>
-      <a-box position="-3 0.5 3" rotation="0 45 0" change-color-on-hover="color: blue"> </a-box> -->
+      <a-box position="-3 0.5 3" rotation="0 45 0" change-color-on-hover="color: blue"> </a-box>
 
       <!-- <a-box position="-3 1.5 -3" rotation="0 45 0" color="rgb(50,50,50)"></a-box>
       <a-box position="3 1.5 -3" rotation="0 45 0" color="rgb(50,50,50)"></a-box>
