--- a/public/aframe2.html
+++ b/public/aframe2.html
@@ -7,17 +7,21 @@
 
     $(document).bind('keypress', function(e) {
         console.log(e.which)
+
+        //Key 'e'
         if(e.which == '101'){
-          // addThings()
           createTarget(10,-4)
+
+        //Key 'r'
         }else if(e.which == '114'){
-          // addThings()
           createTarget(90,1)
+
+        //Key 't'
         }else if(e.which == '116'){
-          // addThings()
           createTarget(180,4)
+
+        //Key 'y'
         }else if(e.which == '121'){
-          // addThings()
           createTarget(270,2)
         }
     })
@@ -55,121 +59,119 @@
     }
 
 
-    function createTarget(targetR, targetX ){
+    function createTarget(targetR, targetY ){
 
+      //Get camera rotation
       var sceneEl = document.querySelector('a-scene');
       var camera = document.querySelector('[camera]')
-      // var target = 110
-
-      // var camRot = camera.getAttribute('rotation')
-      // var cameraEl = document.querySelector('#camera');
       var rotation = camera.getAttribute('rotation');
 
-      var camRotNormalized = 0
+      //Clean up rotation values
+      var camRotCleaned = 0
       if(rotation.y < 0){
-        camRotNormalized = 360+(rotation.y%360)
+        camRotCleaned = 360+(rotation.y%360)
       }else{
-        camRotNormalized = rotation.y%360
+        camRotCleaned = rotation.y%360
       }
 
+      //Print out rotation targets
       console.log("targetR: " + targetR)
-      console.log("targetX: " + targetX)
+      console.log("targetY: " + targetY)
+      console.log("cam rot: " + camRotCleaned)
 
-      console.log("cam rot: " + camRotNormalized)
-
-
+      //Create final goal element
       var goalEl = document.createElement('a-entity');
-
       goalEl.setAttribute('geometry', { primitive: 'box', height: 1.8, width: 1 });
       goalEl.setAttribute('material', {color: 'green', opacity: 0.5});
 
-      var nT = (targetR + 180)%360
+      //Rotate targetR 180
+      var rotatedTargetR = (targetR + 180)%360
+
+      //Set coordinates of final goal
       goalEl.setAttribute('position', {
-          x: 5 * Math.sin((nT * Math.PI)/180), //0.5-Math.random() *6,
-          y: targetX,
-          z: 5 * Math.cos((nT * Math.PI)/180) //0.5-Math.random() *6
+          x: 5 * Math.sin((rotatedTargetR * Math.PI)/180),
+          y: 0, //targetY
+          z: 5 * Math.cos((rotatedTargetR * Math.PI)/180)
         })
 
+      //Allow obejct to be cleared. The colour: blue settings is irrelevant
       goalEl.setAttribute('remove-object-on-hover', {color:'blue'});
+
+      //Add to scene
       sceneEl.appendChild(goalEl);
 
-      var diff = camRotNormalized - targetR
-      var diffA = 360-diff
-      console.log("diff: "+ diff + "diffA :" + diffA )
 
+      //Get distant to target
+      var diffA = camRotCleaned - targetR
+      //Get alternative distance to target
+      var diffB = 360-diffA
+
+      console.log("diffA: "+ diffA + "diffB :" + diffB )
+
+      //Figure out which direction is shortest
+      //ie do we increase or decrease from current position to reach our target
       var direction = 0
 
-      if(diffA < diff ){
-        diff = diffA
+      if(diffB < diffA ){
+        diffA = diffB
         direction = -1
-      }else if(diff < 0 ){
-          direction = -1
-          diff = Math.abs(diff)
+      }else if(diffA < 0 ){
+        direction = -1
+        diffA = Math.abs(diffA)
       }else {
         direction = 1
       }
 
-      var increment = Math.abs(parseFloat(diff))*0.1
+      //Calculate the increment to use to place the blocks
+      var increment = Math.abs(parseFloat(diffA))*0.1
+
       console.log("increment: " +increment)
       console.log("direction : " + direction)
 
-      //-40 = -4
-      // var yInc = 0
-      // if(targetX > rotation.x){
-      // }else{
-      //
-      // }
-      // var xDiff = rotation.x-(targetY*10)
-      // yInc = xDiff * 0.1
-
-      var yInc = ((targetX*13) - rotation.x) / 100
-
-      //Add points
-      //// TODO: make even spacing
+      //Create a string of gray blocks between the current viewport and the final target
       for(var i = 0; i < 10; i ++ ){
 
+        //Create element
         var entityEl = document.createElement('a-entity');
         entityEl.setAttribute('geometry', { primitive: 'box', height: 1.4, width: 1 });
         entityEl.setAttribute('material', {color: 'gray', opacity: 0.5});
-        // entityEl.setAttribute('change-color-on-hover', 'green')
-        // entitlEl.setAttribute('position', {})
-        var randomHeight = 1 // i //(0.5-Math.random())*6
-        // var randomRotationTarget = i*10//Math.random() * 360
-        var rotationTarget = 0
-        var xTarget = 0
 
-        // rotationTarget = (180+ camRotNormalized + ((i) * increment))%360
+        //Use direction value to calculate the target position
+
+
         if(direction === -1){
-          // rotationTarget = camera.z + increment*i
+          //Moving from the target position towards the current position
           rotationTarget = (180 + targetR - ((i+1) * increment))%360
-          // xTarget = (rotation.x/10) + ((10-i) *yInc)
         }else if (direction === 1){
-          // rotationTarget = camera.z - increment*i
-          rotationTarget = (180 + camRotNormalized - ((i+1) * increment))%360
-
+          //Moving from the current position to the target position
+          rotationTarget = (180 + camRotCleaned - ((i+1) * increment))%360
         }
 
-        if(xTarget > rotation.x ){
-          xTarget = (rotation.x/10) - (i*yInc)
-        }else{
-          xTarget = (rotation.x/10) + (i*yInc)
-        }
+        //Unused calculations for Y position
+        // var yPos = 0
+        // if(yPos > rotation.x ){
+        //   yPos = (rotation.x/10) - (i*yInc)
+        // }else{
+        //   yPos = (rotation.x/10) + (i*yInc)
+        // }
 
         console.log(rotationTarget)
-          // rotationTarget = 180+camRotNormalized + (i * increment)
 
+        //Set position of tearget
         entityEl.setAttribute('position', {
-            x: 5 * Math.sin((rotationTarget * Math.PI)/180), //0.5-Math.random() *6,
-            y: xTarget,
-            z: 5 * Math.cos((rotationTarget * Math.PI)/180) //0.5-Math.random() *6
+            x: 5 * Math.sin((rotationTarget * Math.PI)/180),
+            y: 0, //yPos
+            z: 5 * Math.cos((rotationTarget * Math.PI)/180)
           })
 
         entityEl.setAttribute('remove-object-on-hover', {color:'blue'});
         sceneEl.appendChild(entityEl);
 
       }
+
     }
 
+    //This code I found online, was helpful in getting the camera rotation info
     AFRAME.registerComponent('camera-logger', {
         schema: {
           timestamp: {type: 'int'},
@@ -188,7 +190,6 @@
           }else{
             camRotNormalized = rotation.y%360
           }
-
 
           console.log("Time: " + this.data.seconds +"Cam Rot X : "+ rotation.x.toFixed(2) + " Normalized Camera Rotation : "+ camRotNormalized.toFixed(2) )
                       // + "; Camera Position: (" + worldPos.x.toFixed(2) + ", " + worldPos.y.toFixed(2) + ", " + worldPos.z.toFixed(2)
@@ -412,10 +413,9 @@
     <a-scene >
       <!-- <a-entity class="camRot" rotation ="0 190 0"> -->
         <a-entity id="camera" position="0 1.6 0" camera look-controls camera-logger >
-          <a-entity geometry="primitive: plane; height: 0.2; width: 0.01" position="0 0 -1" rotation="0 0 45" material="color: gray; opacity: 0.5" point="target: #jumpbox">
 
-             <!-- </a-entity> -->
-        </a-entity>
+          <!-- <a-entity geometry="primitive: plane; height: 0.2; width: 0.01" position="0 0 -1" rotation="0 0 45" material="color: gray; opacity: 0.5" point="target: #jumpbox">
+          </a-entity> -->
         <!-- <a-cursor id="cursor">
         </a-cursor> -->
         <a-entity cursor="fuse: true; fuseTimeout: 500"
@@ -426,10 +426,10 @@
 
       </a-entity>
 
-      <a-box id="jumpbox" position="-3 0.5 -3" rotation="0 45 0" color="rgb(50,180,50)" change-color-on-hover="color: blue"></a-box>
+      <!-- <a-box id="jumpbox" position="-3 0.5 -3" rotation="0 45 0" color="rgb(50,180,50)" change-color-on-hover="color: blue"></a-box>
       <a-box position= "3 0.5 -3" rotation="0 45 0" color="rgb(227,194,7)" change-color-on-hover="color: blue"></a-box>
       <a-box position= "3 0.5 3" rotation="0 45 0" color="rgb(50,50,190)" change-color-on-hover="color: blue"></a-box>
-      <a-box position="-3 0.5 3" rotation="0 45 0" change-color-on-hover="color: blue"> </a-box>
+      <a-box position="-3 0.5 3" rotation="0 45 0" change-color-on-hover="color: blue"> </a-box> -->
 
       <!-- <a-box position="-3 1.5 -3" rotation="0 45 0" color="rgb(50,50,50)"></a-box>
       <a-box position="3 1.5 -3" rotation="0 45 0" color="rgb(50,50,50)"></a-box>
